Added initial tests for test page

--- a/tests/index.html
+++ b/tests/index.html
@@ -26,13 +26,13 @@
 			<tr>
 				<th>Date YYYY-MM-DD HH-MM-SS TZ</th>
 			</tr>
-			<tr>
+			<!-- <tr>
 				<td>2021-01-01 00:00:00 UTC</td>
 			</tr>
 			<tr>
 				<td>test</td>
 			</tr>
-			<!-- <tr>
+			<tr>
 				<td>2021-01-01 00:00:00 AEDT</td>
 			</tr>
 
@@ -97,10 +97,12 @@
 
 	</div>
 </body>
-
-<script src="../libs/moment-with-locales.min.js"></script>
+<script src="./insertData.js"></script>
+<!-- <script src="../libs/moment-with-locales.min.js"></script>
 <script src="../libs/moment-timezone-with-data.min.js"></script>
-<script src="/tests/moment-interface.js"></script>
-<script src="/tests/main.js"></script>
+<script src="../src/moment-interface.js"></script> -->
+<script src="../dist/main.js"></script>
+<script src="./checkUpdatedValues.js"></script>
+
 
 </html>
