Added Chrome Extension

--- a/mock-site/index.html
+++ b/mock-site/index.html
@@ -24,7 +24,7 @@
 	<div style="width: 400px; margin: 0 auto">
 		<table style="width:100%">
 			<tr>
-				<th>Date YYYY-MM-DD HH-MM-SS TZ</th>
+				<th>Not converted with Chrome extension</th>
 			</tr>
 			<tr>
 				<td>test</td>
