--- a/tests/mock-site/index.html
+++ b/tests/mock-site/index.html
@@ -34,10 +34,7 @@
 	</div>
 </body>
 <script src="./insertData.js"></script>
-<!-- <script src="../libs/moment-with-locales.min.js"></script>
-<script src="../libs/moment-timezone-with-data.min.js"></script>
-<script src="../src/moment-interface.js"></script> -->
-<script src="../dist/main.js"></script>
+<script src="../../dist/main.js"></script>
 <script src="./checkUpdatedValues.js"></script>
 
 
