Updated popup to look nicer

--- a/src/pop-up/html/options.html
+++ b/src/pop-up/html/options.html
@@ -1,4 +1,4 @@
-<option value="" disabled>Quick Select Office Locations</option>
+<option value="" disabled>Quick Select Locations</option>
 <option value="America/Los_Angeles"> SF & YVR &#127482&#127480&#127464&#127462 PST/PDT</option>
 <option value="America/Denver"> Denver &#127482&#127480 MST/MDT</option>
 <option value="America/New_York"> NY/TOR &#127482&#127480&#127464&#127462 EST/EDT</option>
