--- a/src/pop-up/html/pop-up.html
+++ b/src/pop-up/html/pop-up.html
@@ -1,41 +1,44 @@
 <div id="tzc-pop-up">
-    <button id="tzc-open-button">TZ: Australia/Canberra</button>
+    <button id="tzc-open-button"></button>
 
     <div id="tzc-options-display" class="hidden">
-        <h3>Time Zone Converter</h3>
-        <hr />
         <div>
-            <label> Convert MC to: </label>
-            <select size="1" id="tzc-full-list">
-            </select>
+            <h3> Convert Time Zone on page to: </h3>
         </div>
+        <select size="1" id="tzc-full-list" class="tzc-inputs">
+        </select>
         <hr />
         <div>
-            <label> Add time to convert: </label>
-
-            <input id="tzc-input" type="text"
-                placeholder="Formatted time (YYYY-MM-DD HH:MM:SS), Message link or Unix time" ; autocomplete="off" />
+            <h3> Manual Converter </h3>
         </div>
 
         <div id="tzc-float-elements">
-            <div>
-                <label> From: </label>
+            <label> From: </label>
+            <div class="tzc-inputs">
                 <select size="1" id="tzc-from-tz">
                 </select>
             </div>
-            <div>
-                <label> To: </label>
-                <select size="1" id="tzc-to-tz">
+            <div class="tzc-inputs">
+                <input id="tzc-input" type="text"
+                    placeholder="Formatted time (YYYY-MM-DD HH:MM:SS), Message link or Unix time" ;
+                    autocomplete="off" />
+            </div>
+            <label> To: </label>
+            <div class="tzc-inputs">
+
+                <select size="1" id="tzc-to-tz" class="tzc-inputs">
                 </select>
             </div>
-            <div>
-                <button id="tzc-convert-button" class="btn">Convert</button>
-            </div>
+
+        </div>
+
+        <div>
+            <button id="tzc-convert-button" class="btn">Convert</button>
         </div>
         <hr />
         <div id="tzc-output-placeholder"></div>
 
-        <button id="tzc-close-options-button"> x </button>
+        <button id="tzc-close-options-button"> </button>
     </div>
 </div>
 </div>
