Updated popup button

--- a/src/pop-up/html/pop-up.html
+++ b/src/pop-up/html/pop-up.html
@@ -1,9 +1,11 @@
 <div id="tzc-pop-up">
-    <button id="tzc-open-button"></button>
+    <div id="tzc-button-wrapper">
+        <button id="tzc-open-button"></button>
+    </div>
 
     <div id="tzc-options-display" class="hidden">
         <div>
-            <h3> Convert Time Zone on page to: </h3>
+            <h3> Convert times on this page to: </h3>
         </div>
         <select size="1" id="tzc-full-list" class="tzc-inputs">
         </select>
