--- a/src/pop-up/html/pop-up.html
+++ b/src/pop-up/html/pop-up.html
@@ -37,19 +37,18 @@
             <label> To: </label>
             <div class="tzc-inputs">
 
-                <select size="1" class="tzc-to-tz" class="tzc-inputs">
+                <select size="1" class="tzc-to-tz tzc-inputs">
                 </select>
             </div>
 
         </div>
 
         <div>
-            <button class="tzc-convert-button" class="btn">Convert</button>
+            <button class="tzc-convert-button btn">Convert</button>
         </div>
         <hr />
         <div class="tzc-output-placeholder"></div>
 
         <button class="tzc-close-options-button"> </button>
     </div>
-</div>
 </div>
