--- a/tests/mock-site/popup/pop-up.html
+++ b/tests/mock-site/popup/pop-up.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="convertButtonWrapper">
                 <button class="convertButton">Convert</button>
             </div>
             <hr />
