--- a/tests/mock-site/popup/pop-up.html
+++ b/tests/mock-site/popup/pop-up.html
@@ -102,7 +102,7 @@
             </div>
             <hr />
 
-            <div class="outputPlaceholder">test something something</div>
+            <div class="outputPlaceholder">Results: 2021-01-01 09:00:00 test test test test testtest</div>
         </div>
     </div>
 </body>
