--- a/tests/mock-site/popup/pop-up.html
+++ b/tests/mock-site/popup/pop-up.html
@@ -26,7 +26,7 @@
                 <label class="point-down-emoji"> ⤵️</label>
             </div>
 
-            <select size="1" id="selectPageTimeZone">
+            <select size="1" id="js-select-page-timezone">
                 <option value="" disabled>Quick Select Locations</option>
                 <option value="America/Los_Angeles"> SF & YVR &#127482&#127480&#127464&#127462 PST/PDT</option>
                 <option value="America/Denver"> Denver &#127482&#127480 MST/MDT</option>
@@ -50,7 +50,7 @@
                 <label> From Time Zone: </label>
                 <label class="point-down-emoji"> ⤵️</label>
                 <div>
-                    <select size="1" id="from-time-zone">
+                    <select size="1" id="js-from-timezone">
                         <option value="" disabled>Quick Select Locations</option>
                         <option value="America/Los_Angeles"> SF & YVR &#127482&#127480&#127464&#127462 PST/PDT</option>
                         <option value="America/Denver"> Denver &#127482&#127480 MST/MDT</option>
@@ -83,7 +83,7 @@
                 <label> To Time Zone: </label>
                 <label class="point-down-emoji"> ⤵️</label>
                 <div>
-                    <select size="1" id="to-time-zone">
+                    <select size="1" id="js-to-timezone">
                         <option value="" disabled>Quick Select Locations</option>
                         <option value="America/Los_Angeles"> SF & YVR &#127482&#127480&#127464&#127462 PST/PDT</option>
                         <option value="America/Denver"> Denver &#127482&#127480 MST/MDT</option>
