--- a/tests/mock-site/popup/pop-up.html
+++ b/tests/mock-site/popup/pop-up.html
@@ -14,19 +14,19 @@
 <body>
     <timezone-converter-container>
         <div id="open-options-wrapper">
-            <button id="open-options">
+            <button id="js-open-options">
                 <img src="tcicon128.png">
             </button>
         </div>
 
-        <div id="options-display" class="hide-timezone-converter">
-            <button id="close-options"></button>
+        <div id="options-display" class="hide-timezone-element">
+            <button id="js-close-options"></button>
             <div>
                 <h2> Convert times on this page to: </h2>
                 <label class="point-down-emoji"> ⤵️</label>
             </div>
 
-            <select size="1" id="js-select-page-timezone">
+            <select size="1" id="js-page-timezone">
                 <option value="" disabled>Quick Select Locations</option>
                 <option value="America/Los_Angeles"> SF & YVR &#127482&#127480&#127464&#127462 PST/PDT</option>
                 <option value="America/Denver"> Denver &#127482&#127480 MST/MDT</option>
@@ -67,23 +67,24 @@
                     </select>
                 </div>
 
-                <h3> Enter Date & Time / Timestamp </h3>
+                <label> Enter Date & Time or Timestamp </label>
                 <div>
-                    <input type="radio" name="input-type" id="radio-manual-date">
-                    <input type="text" id="input-manual-date" placeholder="2021-01-01 09:00:00 / 1609452000"
+                    <input type="radio" name="input-type" id="js-radio-manual">
+                    <input type="text" id="js-input-manual" placeholder="2021-01-01 09:00:00 / 1609452000"
                         autocomplete="off" />
                 </div>
 
-                <label> Date & Time Picker </label>
+                <label> Picker </label>
                 <div>
-                    <input type="radio" name="input-type" id="radio-ui-date">
-                    <input type="datetime-local" id="input-ui-date" pattern="d{4}\-\d{2}\-\d{2}\s\d{2}(?:\:\d{2}){1,2}">
+                    <input type="radio" name="input-type" id="js-radio-picker">
+                    <input type="datetime-local" id="js-input-picker"
+                        pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}">
                 </div>
 
                 <label> To Time Zone: </label>
                 <label class="point-down-emoji"> ⤵️</label>
                 <div>
-                    <select size="1" id="js-to-timezone">
+                    <select size="1" id="js-to-timeZone">
                         <option value="" disabled>Quick Select Locations</option>
                         <option value="America/Los_Angeles"> SF & YVR &#127482&#127480&#127464&#127462 PST/PDT</option>
                         <option value="America/Denver"> Denver &#127482&#127480 MST/MDT</option>
@@ -102,12 +103,14 @@
             </div>
 
             <div id="convert-datetime-wrapper">
-                <button id="convert-datetime">Convert</button>
+                <button id="js-convert-datetime">Convert</button>
             </div>
 
-            <div id="conversion-output">Results: </div>
+            <div id="js-conversion-output" class="hide-timezone-element"></div>
         </div>
-    </timezone-converter-container>
+        </div>
 </body>
+
+
 
 </html>
