Updating layout of convert buttons

--- a/src/pop-up/html/pop-up.html
+++ b/src/pop-up/html/pop-up.html
@@ -14,6 +14,11 @@
         <select size="1" id="js-page-timezone">
             <!-- options are automatically added on build -->
         </select>
+
+        <!-- TODO: add to above selector -->
+        <div id="convert-datetime-wrapper">
+            <button id="js-convert-datetime">Convert</button>
+        </div>
         <hr />
 
         <div>
@@ -35,7 +40,6 @@
                     autocomplete="off" />
             </div>
 
-            <label> Picker </label>
             <div>
                 <input type="radio" name="input-type" id="js-radio-picker">
                 <input type="datetime-local" id="js-input-picker"
