--- a/src/pop-up/html/pop-up.html
+++ b/src/pop-up/html/pop-up.html
@@ -33,13 +33,13 @@
                 </select>
             </div>
 
-            <div data-tip="Format: YYYY-MM-DD HH:MM:SS or Unix Timestamp (can be pasted message link)">
+            <div data-tip="Tip: format as YYYY-MM-DD HH:MM:SS or a Unix Timestamp (can be a pasted message link)">
                 <input type="radio" name="input-type" id="js-radio-manual">
                 <input type="text" id="js-input-manual" placeholder="2021-11-26 09:00:00 / 1637946000 (Timestamp)"
                     autocomplete="off" />
             </div>
 
-            <div>
+            <div data-tip="Tip: use the calendar picker on the right ->">
                 <input type="radio" name="input-type" id="js-radio-picker">
                 <input type="datetime-local" id="js-input-picker"
                     pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}">
