--- a/src/pop-up/html/pop-up.html
+++ b/src/pop-up/html/pop-up.html
@@ -33,16 +33,21 @@
                 </select>
             </div>
 
-            <div data-tip="Tip: format as YYYY-MM-DD HH:MM:SS or a Unix Timestamp (can be a pasted message link)">
+            <div class="tooltip">
+                <span class="tooltiptext"><b>Tip:</b> <br> Format as YYYY-MM-DD HH:MM:SS or a Unix Timestamp (paste in a
+                    message link!)</span>
+
                 <input type="radio" name="input-type" id="js-radio-manual">
-                <input type="text" id="js-input-manual" placeholder="2021-11-26 09:00:00 / 1637946000 (Timestamp)"
+                <input type="text" id="js-input-manual" placeholder="YYYY-MM-DD --:--:--) OR 1637946000 (Timestamp)"
                     autocomplete="off" />
             </div>
 
-            <div data-tip="Tip: use the calendar picker on the right ->">
+            <div class="tooltip">
+                <span class="tooltiptext"><b>Tip:</b> <br> Use the calendar picker on the right ➡️</span>
+
                 <input type="radio" name="input-type" id="js-radio-picker">
-                <input type="datetime-local" id="js-input-picker"
-                    pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}">
+                <input type="datetime-local" id="js-input-picker" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}"
+                    placeholder="YYYY-MM-DD --:--:-- / 1637946000 (Timestamp)">
             </div>
 
             <label> To Time Zone: </label>
