--- a/src/pop-up/html/pop-up.html
+++ b/src/pop-up/html/pop-up.html
@@ -38,7 +38,7 @@
                     message link!)</span>
 
                 <input type="radio" name="input-type" id="js-radio-manual">
-                <input type="text" id="js-input-manual" placeholder="YYYY-MM-DD --:--:--) OR 1637946000 (Timestamp)"
+                <input type="text" id="js-input-manual" placeholder="YYYY-MM-DD --:--:-- OR 1637946000"
                     autocomplete="off" />
             </div>
 
