--- a/src/pop-up/html/pop-up.html
+++ b/src/pop-up/html/pop-up.html
@@ -64,5 +64,11 @@
 
 
         <div id="js-conversion-output" class="hide-timezone-element"></div>
+        <div id="js-conversion-alert" class="conversion-alert hide-timezone-element">
+            <span class="closebtn" onclick="this.parentElement.classList.add('hide-timezone-element')">&times;</span>
+            <h3> Error: </h3>
+            <p> Unfortunately only certain formats are supported (`YYYY-MM-DD HH:MM:SS` or Unix Timestamp).</p>
+            <p>Please use the Date & Time Picker above or paste a message link containing a Timestamp</p>
+        </div>
     </div>
     </div>
