--- a/src/popup/html/popup.html
+++ b/src/popup/html/popup.html
@@ -8,7 +8,7 @@
         <button id="js-close-options"></button>
         <div>
             <h2> Convert times on this page to: </h2>
-            <label class="point-down-emoji"> ⤵️</label>
+            <label class="point-down-emoji"> &#10549;</label>
         </div>
         <div>
             <select size="1" id="js-page-timezone">
@@ -43,7 +43,7 @@
             </div>
 
             <div class="tooltip">
-                <span class="tooltiptext"><b>Tip:</b> <br> Use the calendar picker on the right ➡️</span>
+                <span class="tooltiptext"><b>Tip:</b> <br> Use the calendar picker on the right &#8594;</span>
 
                 <input type="radio" name="input-type" id="js-radio-picker">
                 <input type="datetime-local" id="js-input-picker" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}"
@@ -51,7 +51,7 @@
             </div>
 
             <label> To Time Zone: </label>
-            <label class="point-down-emoji"> ⤵️</label>
+            <label class="point-down-emoji"> &#10549;</label>
             <div>
                 <select size="1" id="js-to-timeZone">
                     <!-- options are automatically added on build -->
@@ -65,7 +65,7 @@
 
         <div id="js-conversion-output" class="hide-timezone-element"></div>
         <div id="js-conversion-alert" class="conversion-alert hide-timezone-element">
-            <span class="closebtn" onclick="this.parentElement.classList.add('hide-timezone-element')">&times;</span>
+            <span id="js-close-alert" class="closebtn">&times;</span>
             <h3> Error: </h3>
             <p> Unfortunately only certain formats are supported (`YYYY-MM-DD HH:MM:SS` or Unix Timestamp).</p>
             <p>Please use the Date & Time Picker above or paste a message link containing a Timestamp</p>
