--- a/src/popup/html/popup.html
+++ b/src/popup/html/popup.html
@@ -26,7 +26,7 @@
         </div>
         <div>
             <label> From Time Zone: </label>
-            <label class="point-down-emoji"> ⤵️</label>
+            <label class="point-down-emoji"> &#10549;</label>
             <div>
                 <select size="1" id="js-from-timezone">
                     <!-- options are automatically added on build -->
