Added build for github pages

--- a/tests/mock-site/index-dev.html
+++ b/tests/mock-site/index-dev.html
@@ -24,7 +24,7 @@
 	<div style="width: 400px; margin: 0 auto">
 		<table style="width:100%">
 			<tr>
-				<th>Not converted with Chrome extension</th>
+				<th>Date times to convert</th>
 			</tr>
 			<tr>
 				<td>test</td>
