Added build for github pages

--- a/tests/mock-site/index-dev.html
+++ b/tests/mock-site/index-dev.html
@@ -34,8 +34,8 @@
 	</div>
 </body>
 <script src="./insertData.js"></script>
-<script src="../../dist/main.js"></script>
-<script src="./checkUpdatedValues.js"></script>
+<!-- <script src="../../dist/main.js"></script> -->
+<!-- <script src="./checkUpdatedValues.js"></script> -->
 
 
 </html>
